--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -13,7 +13,7 @@ libdirectunitactions_la_SOURCES	=  consumeammo.cpp inflictdamage.cpp destructcon
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp 
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
-libmiscactions_la_SOURCES	= servicing.cpp jumpdrive.cpp selfdestruct.cpp 
+libmiscactions_la_SOURCES	= servicing.cpp jumpdrive.cpp selfdestruct.cpp putobjectcommand.cpp
 libmiscactions_la_LIBADD		= @SDL_LIBS@
 
 libmapactions_la_SOURCES	= spawnobject.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
