Added question dialog before sending files by mail  Added infrastructure for saving dialog questions

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -583,6 +583,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\tos.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\turncontrol.cpp"
 				>
 			</File>
