Added mine laying and removal to undo actions

--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -61,12 +61,14 @@ am_libfullgameactions_la_OBJECTS = containeraction.lo \
 	attackcommand.lo moveunitcommand.lo convertcontainer.lo
 libfullgameactions_la_OBJECTS = $(am_libfullgameactions_la_OBJECTS)
 libmapactions_la_DEPENDENCIES =
-am_libmapactions_la_OBJECTS = spawnobject.lo changeview.lo \
-	removemine.lo removeobject.lo changeobjectproperty.lo
+am_libmapactions_la_OBJECTS = spawnobject.lo spawnmine.lo \
+	changeview.lo removemine.lo removeobject.lo \
+	changeobjectproperty.lo
 libmapactions_la_OBJECTS = $(am_libmapactions_la_OBJECTS)
 libmiscactions_la_DEPENDENCIES =
 am_libmiscactions_la_OBJECTS = servicing.lo jumpdrive.lo \
-	selfdestruct.lo putobjectcommand.lo
+	selfdestruct.lo spawnmine.lo putobjectcommand.lo \
+	putminecommand.lo
 libmiscactions_la_OBJECTS = $(am_libmiscactions_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -260,9 +262,9 @@ libdirectunitactions_la_SOURCES = consumeammo.cpp inflictdamage.cpp destructcont
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp 
 
 libdirectunitactions_la_LIBADD = @SDL_LIBS@
-libmiscactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp putobjectcommand.cpp
+libmiscactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
 libmiscactions_la_LIBADD = @SDL_LIBS@
-libmapactions_la_SOURCES = spawnobject.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
+libmapactions_la_SOURCES = spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
 libmapactions_la_LIBADD = @SDL_LIBS@
 libfullgameactions_la_SOURCES = containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp \
 										unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp
@@ -348,12 +350,14 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/jumpdrive.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moveunit.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moveunitcommand.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/putminecommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/putobjectcommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/registerunitrftarget.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/removemine.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/removeobject.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/selfdestruct.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/servicing.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spawnmine.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spawnobject.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitaction.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitcommand.Plo@am__quote@
