Fixed ctrl hotkeys on national langauge keyboards

--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -773,6 +773,10 @@
 					RelativePath="..\..\..\actions\unitaction.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\actions\unitfieldregistration.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Utils"
