--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -966,6 +966,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\actions\putminecommand.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\actions\putobjectcommand.cpp"
 					>
 				</File>
@@ -979,6 +983,10 @@
 				</File>
 				<File
 					RelativePath="..\..\..\actions\removeobject.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\actions\spawnmine.cpp"
 					>
 				</File>
 				<File
