Fixed: ascend/descend icons visible too often  Fixed: resource discoverage was not undone

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -954,6 +954,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\actions\discoverresources.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\actions\inflictdamage.cpp"
 					>
 				</File>
