--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -10,7 +10,7 @@ libactions_la_LIBADD		= @SDL_LIBS@
 
 libdirectunitactions_la_SOURCES	=  consumeammo.cpp inflictdamage.cpp destructcontainer.cpp \
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp \
-                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp 
+                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
 libmiscactions_la_SOURCES	= servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
@@ -19,7 +19,7 @@ libmiscactions_la_LIBADD		= @SDL_LIBS@
 libmapactions_la_SOURCES	= spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
 libmapactions_la_LIBADD		= @SDL_LIBS@
 
-libfullgameactions_la_SOURCES	= containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp \
+libfullgameactions_la_SOURCES	= containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
 										unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp
 libfullgameactions_la_LIBADD		= @SDL_LIBS@
 
