--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -57,8 +57,9 @@ libdirectunitactions_la_OBJECTS =  \
 	$(am_libdirectunitactions_la_OBJECTS)
 libfullgameactions_la_DEPENDENCIES =
 am_libfullgameactions_la_OBJECTS = containeraction.lo \
-	consumeresource.lo vehicleattack.lo moveunit.lo unitcommand.lo \
-	attackcommand.lo moveunitcommand.lo convertcontainer.lo
+	consumeresource.lo vehicleattack.lo moveunit.lo \
+	discoverresources.lo unitcommand.lo attackcommand.lo \
+	moveunitcommand.lo convertcontainer.lo
 libfullgameactions_la_OBJECTS = $(am_libfullgameactions_la_OBJECTS)
 libmapactions_la_DEPENDENCIES =
 am_libmapactions_la_OBJECTS = spawnobject.lo spawnmine.lo \
@@ -259,14 +260,14 @@ libactions_la_SOURCES = action.cpp command.cpp context.cpp actionresult.cpp acti
 libactions_la_LIBADD = @SDL_LIBS@
 libdirectunitactions_la_SOURCES = consumeammo.cpp inflictdamage.cpp destructcontainer.cpp \
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp \
-                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp 
+                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp
 
 libdirectunitactions_la_LIBADD = @SDL_LIBS@
 libmiscactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
 libmiscactions_la_LIBADD = @SDL_LIBS@
 libmapactions_la_SOURCES = spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
 libmapactions_la_LIBADD = @SDL_LIBS@
-libfullgameactions_la_SOURCES = containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp \
+libfullgameactions_la_SOURCES = containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
 										unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp
 
 libfullgameactions_la_LIBADD = @SDL_LIBS@
@@ -346,6 +347,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/context.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/convertcontainer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/destructcontainer.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/discoverresources.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/inflictdamage.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/jumpdrive.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moveunit.Plo@am__quote@
