Fixed doxygen skiplist

--- a/source/doxygen.config
+++ b/source/doxygen.config
@@ -92,7 +92,7 @@ EXCLUDE                = tools \
                          libs/getopt \
                          libs/libsigc++ \
                          libs/loki \
-                         loki-0.1.6 \
+                         libs/loki-0.1.6 \
                          libs/rand \
                          libs/sdlmm \
                          libs/triangul \
