Compilable for windows again

--- a/source/tools/win/mount.vcproj
+++ b/source/tools/win/mount.vcproj
@@ -68,13 +68,14 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/FORCE:MULTIPLE"
-				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.debug.lib"
+				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.debug.lib SDLmain.lib"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin\mount.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/Debug&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;"
 				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/mount.pdb"
+				SubSystem="1"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 			/>
@@ -153,13 +154,14 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/FORCE:MULTIPLE"
-				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.lib"
+				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.lib SDLmain.lib"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin/mount.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;"
 				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/mount.pdb"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				EntryPointSymbol=""
