Added Redo  Added ActionPanel  Fixed: campaigns had replay enabled when started through NewGame dialog  NOS campaign can now be started on Linux (had wrong case for filenames)

--- a/source/doxygen.config
+++ b/source/doxygen.config
@@ -1,3 +1,4 @@
+
 # Doxyfile 1.4.6
 
 #---------------------------------------------------------------------------
@@ -97,6 +98,8 @@ EXCLUDE                = tools \
                          libs/sdlmm \
                          libs/triangul \
                          libs/revel \
+                         libs/paragui \
+                         libs/sdl_sound \
                          dos \
                          test
 EXCLUDE_SYMLINKS       = NO
