--- a/configure.in
+++ b/configure.in
@@ -190,16 +190,24 @@ AC_CHECK_LIB( SDL_image,
 #AC_MSG_RESULT("yes")
 
 
-AC_CHECK_LIB(lua5.0, 
+AC_CHECK_LIB(lua50, 
              lua_open,
-             AC_LIB_MISSING( "Lua 5.0", http://www.lua.org/))
+             LUAAVAIL=1 )
+             
+#             AC_LIB_MISSING( "Lua 5.0", http://www.lua.org/))
 
+if test "x$LUAAVAIL" = x1; then
 
-LUA_FLAGS="-I/usr/include/lua50/"
-AC_SUBST(LUA_FLAGS)
-
-LUA_LIBS="-llua50 -llualib50 -lluabind"
-AC_SUBST(LUA_LIBS)
+   LUA_FLAGS="-I/usr/include/lua50/"
+   AC_SUBST(LUA_FLAGS)
+   
+   LUA_LIBS="-llua50 -llualib50 -lluabind"
+   AC_SUBST(LUA_LIBS)
+   
+   LUA_TAGS="-DLUAINTERFACE"
+   AC_SUBST( LUA_TAGS )
+   
+fi
 
 AC_CHECK_LIB(jpeg, 
              jpeg_CreateDecompress,,
