--- a/source/unix/asc/Makefile.am
+++ b/source/unix/asc/Makefile.am
@@ -4,7 +4,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 
 INCLUDES      = -I$(top_srcdir) -I$(top_srcdir)/source -I$(top_srcdir)/source/libs/paragui/include @LokiInclude@
 
-AM_CXXFLAGS   = $(SDL_CFLAGS) -Dsgmain $(SIGC_CFLAGS) -DLUAINTERFACE
+AM_CXXFLAGS   = $(SDL_CFLAGS) -Dsgmain $(SIGC_CFLAGS) @LUA_TAGS@
 
 bin_PROGRAMS  = asc
 
