--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -98,7 +98,6 @@ asc_DEPENDENCIES =  \
 	$(top_builddir)/source/actions/libfullgameactions.la \
 	$(top_builddir)/source/actions/libmapactions.la \
 	$(top_builddir)/source/actions/libmiscactions.la \
-	$(top_builddir)/source/lua/libluainterface.la \
 	$(top_builddir)/source/util/libutil.la \
 	$(top_builddir)/source/tasks/libtasks.la \
 	$(top_builddir)/source/graphics/libgraphics.la \
@@ -189,6 +188,8 @@ LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 LUA_FLAGS = @LUA_FLAGS@
 LUA_LIBS = @LUA_LIBS@
+LUA_LOCAL_LIB = @LUA_LOCAL_LIB@
+LUA_MAKEDIR = @LUA_MAKEDIR@
 LUA_TAGS = @LUA_TAGS@
 LokiInclude = @LokiInclude@
 MAINT = @MAINT@
@@ -323,7 +324,7 @@ $(top_builddir)/source/actions/libdirectunitactions.la  \
 $(top_builddir)/source/actions/libfullgameactions.la  \
 $(top_builddir)/source/actions/libmapactions.la  \
 $(top_builddir)/source/actions/libmiscactions.la  \
-$(top_builddir)/source/lua/libluainterface.la  \
+@LUA_LOCAL_LIB@  \
 $(top_builddir)/source/util/libutil.la  $(top_builddir)/source/tasks/libtasks.la \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
 $(top_builddir)/source/dialogs/libgamedialogs.la $(top_builddir)/source/actions/libactions.la \
