--- a/data/music/Makefile.in
+++ b/data/music/Makefile.in
@@ -113,6 +113,8 @@ LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 LUA_FLAGS = @LUA_FLAGS@
 LUA_LIBS = @LUA_LIBS@
+LUA_LOCAL_LIB = @LUA_LOCAL_LIB@
+LUA_MAKEDIR = @LUA_MAKEDIR@
 LUA_TAGS = @LUA_TAGS@
 LokiInclude = @LokiInclude@
 MAINT = @MAINT@
