--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,8 +1,10 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= @GENCL@ docs libs sdl util ai graphics network dialogs widgets actions tasks lua video unix tools doc win32 
+SUBDIRS 		= @GENCL@ docs libs sdl util ai graphics network dialogs widgets actions tasks @LUA_MAKEDIR@ video unix tools doc win32 
 
 EXTRA_DIST  = $(srcdir)/*.cpp $(srcdir)/*.h $(srcdir)/doxygen.config $(srcdir)/clparser/*.cpp $(srcdir)/clparser/*.h $(srcdir)/clparser/Makefile.am $(srcdir)/clparser/Makefile.in
+
+DIST_SUBDIRS = lua
 
 htmldoc: doxygen.config
 	doxygen doxygen.config
