--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -221,7 +221,7 @@ top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
 SUBDIRS = @GENCL@ docs libs sdl util ai graphics network dialogs widgets actions tasks @LUA_MAKEDIR@ video unix tools doc win32 
 EXTRA_DIST = $(srcdir)/*.cpp $(srcdir)/*.h $(srcdir)/doxygen.config $(srcdir)/clparser/*.cpp $(srcdir)/clparser/*.h $(srcdir)/clparser/Makefile.am $(srcdir)/clparser/Makefile.in
-DIST_SUBDIRS = lua
+DIST_SUBDIRS = lua @GENCL@ docs libs sdl util ai graphics network dialogs widgets actions tasks video unix tools doc win32 
 all: all-recursive
 
 .SUFFIXES:
