--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -52,7 +52,7 @@ am_libdirectunitactions_la_OBJECTS = consumeammo.lo inflictdamage.lo \
 	destructcontainer.lo changeunitmovement.lo unitaction.lo \
 	changeunitproperty.lo registerunitrftarget.lo \
 	containeraction.lo changecontainerproperty.lo \
-	unitfieldregistration.lo
+	unitfieldregistration.lo viewregistration.lo
 libdirectunitactions_la_OBJECTS =  \
 	$(am_libdirectunitactions_la_OBJECTS)
 libfullgameactions_la_DEPENDENCIES =
@@ -266,7 +266,7 @@ libactions_la_SOURCES = action.cpp command.cpp context.cpp actionresult.cpp acti
 libactions_la_LIBADD = @SDL_LIBS@
 libdirectunitactions_la_SOURCES = consumeammo.cpp inflictdamage.cpp destructcontainer.cpp \
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp \
-                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp
+                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp
 
 libdirectunitactions_la_LIBADD = @SDL_LIBS@
 libmiscactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
@@ -371,6 +371,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitcommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitfieldregistration.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicleattack.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/viewregistration.Plo@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
