Fixed keyboard shortcut redo

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -1021,6 +1021,10 @@
 					RelativePath="..\..\..\actions\vehicleattack.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\actions\viewregistration.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="utils"
