--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -802,6 +802,10 @@
 					RelativePath="..\..\..\actions\unitfieldregistration.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\actions\viewregistration.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
