--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -781,6 +781,10 @@
 					RelativePath="..\..\..\actions\unitfieldregistration.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\actions\viewregistration.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Utils"
