Updated project files

--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -610,6 +610,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\edittechadapter.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\eventeditor.cpp"
 					>
 				</File>
