--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -231,6 +231,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 SUBDIRS = dialog  @MUSICDIR@
 DIST_SUBDIRS = dialog music
 # unitsets trrobj buildings icons sounds 
