--- a/doc/manpages/Makefile.in
+++ b/doc/manpages/Makefile.in
@@ -215,6 +215,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in asc.6 asc_demount.6 asc_mount.6 asc_mapedit.6 asc_makegfx.6 asc_weaponguide.6
 dist_man_MANS = $(srcdir)/asc.6 $(srcdir)/asc_demount.6 $(srcdir)/asc_mount.6 $(srcdir)/asc_mapedit.6 $(srcdir)/asc_makegfx.6 $(srcdir)/asc_weaponguide.6
 all: all-am
