--- a/installer/Makefile.in
+++ b/installer/Makefile.in
@@ -211,6 +211,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 CLEANFILES = *.exe *.tar.bz2 licdata.txt
 all: all-am
 
