--- a/source/clparser/Makefile.in
+++ b/source/clparser/Makefile.in
@@ -210,6 +210,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 BUILT_SOURCES = asc.cpp mapedit.cpp map2pcx.cpp mount.cpp \
 demount.cpp viewid.cpp makegfx.cpp gfx2pcx.cpp tank2pcx.cpp bin2txt.cpp \
