--- a/source/libs/paragui/src/Makefile.in
+++ b/source/libs/paragui/src/Makefile.in
@@ -244,6 +244,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 SUBDIRS = draw font themes core widgets ystring
 noinst_LTLIBRARIES = libparagui.la
 libparagui_la_SOURCES = paragui.cpp
