--- a/source/libs/paragui/src/draw/Makefile.in
+++ b/source/libs/paragui/src/draw/Makefile.in
@@ -231,6 +231,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 noinst_LTLIBRARIES = libpgdraw.la
 libpgdraw_la_SOURCES = \
 	surface.cpp \
