--- a/source/libs/revel/Makefile.in
+++ b/source/libs/revel/Makefile.in
@@ -239,6 +239,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 noinst_LTLIBRARIES = librevel.la
 librevel_la_SOURCES = avilib.c avilib.h BaseEncoder.cpp BaseEncoder.h revelcore.cpp XvidEncoder.cpp XvidEncoder.h
 EXTRA_DIST = $(srcdir)/*.h
