--- a/source/libs/sdl_sound/Makefile.in
+++ b/source/libs/sdl_sound/Makefile.in
@@ -230,6 +230,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 EXTRA_DIST = $(srcdir)/*.h $(srcdir)/README.TXT
 INCLUDE = -I$(top_src_dir) -I$(top_builddir)
 noinst_LTLIBRARIES = libSDL_sound_int.la
