--- a/source/network/Makefile.in
+++ b/source/network/Makefile.in
@@ -240,6 +240,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
 AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@ @LIBCURL_CPPFLAGS@  @LokiInclude@ -Dsgmain 
