--- a/source/win32/Makefile.in
+++ b/source/win32/Makefile.in
@@ -222,6 +222,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 SUBDIRS = msvc
 EXTRA_DIST = $(srcdir)/gcc/fileio.h $(srcdir)/gcc/global_os.h $(srcdir)/*.h $(srcdir)/*.cpp
