--- a/data/music/Makefile.in
+++ b/data/music/Makefile.in
@@ -220,6 +220,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 pkgdata_DATA = frontiers.ogg time_to_strike.ogg machine_wars.ogg
 all: all-am
 
