--- a/doc/unitguide/Makefile.in
+++ b/doc/unitguide/Makefile.in
@@ -222,6 +222,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 SUBDIRS = output
 EXTRA_DIST = menu.pl
