--- a/source/ai/Makefile.in
+++ b/source/ai/Makefile.in
@@ -230,6 +230,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@ -Dsgmain @LokiInclude@
 INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
