--- a/source/doc/Makefile.in
+++ b/source/doc/Makefile.in
@@ -210,6 +210,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 EXTRA_DIST = $(srcdir)/ClassDiagram1.png
 all: all-am
