--- a/source/libs/loki-0.1.6/Makefile.in
+++ b/source/libs/loki-0.1.6/Makefile.in
@@ -229,6 +229,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 noinst_LTLIBRARIES = libloki.la
 AM_CXXFLAGS = @LokiInclude@
