--- a/source/libs/paragui/src/font/Makefile.in
+++ b/source/libs/paragui/src/font/Makefile.in
@@ -229,6 +229,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 noinst_LTLIBRARIES = libpgfont.la
 libpgfont_la_SOURCES = \
 	pgfont_impl.cpp \
