--- a/source/libs/paragui/src/themes/Makefile.in
+++ b/source/libs/paragui/src/themes/Makefile.in
@@ -229,6 +229,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 noinst_LTLIBRARIES = libtheme.la
 libtheme_la_SOURCES = \
 	themeloader.cpp \
