--- a/source/libs/triangul/Makefile.in
+++ b/source/libs/triangul/Makefile.in
@@ -229,6 +229,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 INCLUDE = -I$(top_src_dir)
 noinst_LTLIBRARIES = libtriangul.la
