--- a/source/tools/lib/Makefile.in
+++ b/source/tools/lib/Makefile.in
@@ -229,6 +229,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 INCLUDES = -I$(top_builddir) -I$(abs_top_srcdir)/source
 noinst_LTLIBRARIES = libasc_cmd.la
