--- a/source/unix/Makefile.in
+++ b/source/unix/Makefile.in
@@ -221,6 +221,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 SUBDIRS = asc mapeditor @PBPED@
 DIST_SUBDIRS = asc mapeditor pbpedit
