--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -20,7 +20,8 @@ libmapactions_la_SOURCES	= spawnobject.cpp spawnmine.cpp changeview.cpp removemi
 libmapactions_la_LIBADD		= @SDL_LIBS@
 
 libfullgameactions_la_SOURCES	= containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
-                                  unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp constructunitcommand.cpp
+                                  unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp \
+                                  constructunitcommand.cpp spawnunit.cpp
 libfullgameactions_la_LIBADD		= @SDL_LIBS@
 
 
