Refuelling is now covered by Undo too

--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -8,9 +8,9 @@ noinst_LTLIBRARIES 	= libactions.la libdirectunitactions.la libmiscactions.la li
 libactions_la_SOURCES	= action.cpp command.cpp context.cpp actionresult.cpp actioncontainer.cpp containeraction.cpp
 libactions_la_LIBADD		= @SDL_LIBS@
 
-libdirectunitactions_la_SOURCES	=  consumeammo.cpp inflictdamage.cpp destructcontainer.cpp \
-                          changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp \
-                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp
+libdirectunitactions_la_SOURCES	=  inflictdamage.cpp destructcontainer.cpp \
+                          changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
+                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
 libmiscactions_la_SOURCES	= servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
@@ -21,7 +21,7 @@ libmapactions_la_LIBADD		= @SDL_LIBS@
 
 libfullgameactions_la_SOURCES	= containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
                                   unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp \
-                                  constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp servicecommand.cpp
+                                  constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp servicecommand.cpp  
 libfullgameactions_la_LIBADD		= @SDL_LIBS@
 
 
