--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -48,11 +48,12 @@ am_libactions_la_OBJECTS = action.lo command.lo context.lo \
 	actionresult.lo actioncontainer.lo containeraction.lo
 libactions_la_OBJECTS = $(am_libactions_la_OBJECTS)
 libdirectunitactions_la_DEPENDENCIES =
-am_libdirectunitactions_la_OBJECTS = consumeammo.lo inflictdamage.lo \
+am_libdirectunitactions_la_OBJECTS = inflictdamage.lo \
 	destructcontainer.lo changeunitmovement.lo unitaction.lo \
 	changeunitproperty.lo registerunitrftarget.lo \
-	containeraction.lo changecontainerproperty.lo \
-	unitfieldregistration.lo viewregistration.lo
+	consumeresource.lo containeraction.lo \
+	changecontainerproperty.lo unitfieldregistration.lo \
+	viewregistration.lo consumeammo.lo
 libdirectunitactions_la_OBJECTS =  \
 	$(am_libdirectunitactions_la_OBJECTS)
 libfullgameactions_la_DEPENDENCIES =
@@ -267,9 +268,9 @@ AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@
 noinst_LTLIBRARIES = libactions.la libdirectunitactions.la libmiscactions.la libmapactions.la libfullgameactions.la
 libactions_la_SOURCES = action.cpp command.cpp context.cpp actionresult.cpp actioncontainer.cpp containeraction.cpp
 libactions_la_LIBADD = @SDL_LIBS@
-libdirectunitactions_la_SOURCES = consumeammo.cpp inflictdamage.cpp destructcontainer.cpp \
-                          changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp \
-                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp
+libdirectunitactions_la_SOURCES = inflictdamage.cpp destructcontainer.cpp \
+                          changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
+                          containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp
 
 libdirectunitactions_la_LIBADD = @SDL_LIBS@
 libmiscactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
@@ -278,7 +279,7 @@ libmapactions_la_SOURCES = spawnobject.cpp spawnmine.cpp changeview.cpp removemi
 libmapactions_la_LIBADD = @SDL_LIBS@
 libfullgameactions_la_SOURCES = containeraction.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
                                   unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp \
-                                  constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp servicecommand.cpp
+                                  constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp servicecommand.cpp  
 
 libfullgameactions_la_LIBADD = @SDL_LIBS@
 EXTRA_DIST = $(srcdir)/*.h
