--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -771,6 +771,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\actions\consumeresource.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\actions\containeraction.cpp"
 					>
 				</File>
