--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -54,7 +54,7 @@ am_libdirectunitactions_la_OBJECTS = inflictdamage.lo \
 	consumeresource.lo containeraction.lo \
 	changecontainerproperty.lo unitfieldregistration.lo \
 	viewregistration.lo consumeammo.lo recycleunitcommand.lo \
-	destructunitcommand.lo
+	destructunitcommand.lo reactionfireswitchcommand.lo
 libdirectunitactions_la_OBJECTS =  \
 	$(am_libdirectunitactions_la_OBJECTS)
 libfullgameactions_la_DEPENDENCIES =
@@ -272,7 +272,7 @@ libactions_la_LIBADD = @SDL_LIBS@
 libdirectunitactions_la_SOURCES = inflictdamage.cpp destructcontainer.cpp \
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp \
-                          recycleunitcommand.cpp destructunitcommand.cpp
+                          recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp
 
 libdirectunitactions_la_LIBADD = @SDL_LIBS@
 libmiscactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
@@ -371,6 +371,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moveunitcommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/putminecommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/putobjectcommand.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/reactionfireswitchcommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/recycleunitcommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/registerunitrftarget.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/removemine.Plo@am__quote@
